--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,80 @@
     padding:0;
     border:0;
 }
+
+#home{
+    float: left;
+    font-size: 280%;
+    margin-left: 30px;
+}
+
+#navbar-menu{
+    font-size: 110%;
+    list-style-type: none;
+}
+
+
+#home, #navbar-menu{
+    line-height: 50px;
+}
+
+#navbar-menu li {
+    float: right;
+    margin-right: 30px;
+}
+
+#navbar-menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#navbar-menu a:hover {
+    border-bottom: 1px solid #777777;
+}
+
+#main-space{
+    height: 90vh;
+    width: 100vw;
+    overflow: hidden;
+    position: relative;
+}
+
+#main-image{
+    height: 90vh;
+    width: 100vw;
+    background: url("../images/photo-1587620962725-abab7fe55159.jpg") no-repeat center center;
+    opacity: 0.5;
+    background-size: cover;
+}
+
+#main-text {
+    position: absolute;
+    display: block;
+    margin: auto;
+    background-color: black;
+}
+
+/* ------------------------------- Footer */
+
+.footer-brief {
+    background-color: #f2f2f2;
+    padding: 10px;
+}
+
+.logos {
+    font-size: 40px;
+    text-align: center;
+}
+
+.footer-brief a{
+    text-decoration: none;
+    color: inherit;
+}
+
+.footer-brief a:hover{
+    color: red;
+}
+
+.qlinks {
+    column-count: 2;
+}
