--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
-*{
-    margin:0;
-    padding:0;
-    border:0;
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
 
-#home{
+#home {
     float: left;
     font-size: 280%;
     padding-left: 20px;
@@ -12,14 +12,15 @@
     border-color: #fed93a;
 }
 
-#navbar-menu{
+#navbar-menu {
     margin: 0;
     font-size: 32px;
     list-style-type: none;
 }
 
 
-#home, #navbar-menu{
+#home,
+#navbar-menu {
     margin: 1px;
     line-height: 50px;
 }
@@ -41,21 +42,21 @@
     color: #182c50;
     text-shadow: 1px 1px 1px #000;
     background-color: #f2f2f2;
-} 
+}
 
 #navbar-menu a {
     text-decoration: none;
     color: inherit;
 }
 
-#main-space{
+#main-space {
     height: 95vh;
     width: 100vw;
     overflow: hidden;
     position: relative;
 }
 
-#main-image{
+#main-image {
     height: 95vh;
     width: 100vw;
     background: url("../images/photo-1587620962725-abab7fe55159.jpg") no-repeat center center;
@@ -63,23 +64,70 @@
     background-size: cover;
 }
 
-#main-me{
+#main-image4 {
+    height: 95vh;
+    width: 100vw;
+    background: url("../images/ricardo-gomez-angel-D9kOnC_1AHw-unsplash.jpg") no-repeat center center;
+    opacity: 0.5;
+    background-size: cover;
+}
+
+#main-me {
     background-position: center;
     background-repeat: no-repeat;
 }
 
-#main-me img{
+#main-me img {
     top: 15%;
-    left: 35%;
+    left: 40%;
     position: absolute;
     border-radius: 50%;
 }
 
 .title {
     top: 65%;
-    left: 25%;
+    left: 30%;
     position: absolute;
     text-align: center;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 60%;
+}
+
+input[type=text], textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;}
+
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+.labelatt {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+}
+
+.textentry {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
 }
 
 /* ------------------------------- Footer */
@@ -94,12 +142,12 @@
     text-align: center;
 }
 
-.footer-brief a{
+.footer-brief a {
     text-decoration: none;
     color: inherit;
 }
 
-.footer-brief a:hover{
+.footer-brief a:hover {
     color: red;
 }
 
