--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
     margin: 0;
     font-size: 32px;
     list-style-type: none;
+
 }
 
 #home,
@@ -32,28 +33,29 @@
     height: 100%;
 }
 
+#navbar-menu a {
+    text-decoration: none;
+    color: inherit;
+}
+
 #navbar-menu li:hover {
     display: block;
     transition: .2s linear;
     opacity: 1;
     font-weight: 400;
     transform: scale(1.1);
-    color: initial;
     text-shadow: 1px 1px 1px #000;
     background-color: #f2f2f2;
 }
 
 .active {
+    color: black;
+    opacity: 1;
     display: block;
-    font-weight: 400;
+    font-weight: 500;
     transform: scale(1.1);
-    text-shadow: 1px 1px 1px #000;
+    text-shadow: 1px 1px 1px #000000;
     background-color: #f2f2f2;
-}
-
-#navbar-menu a {
-    text-decoration: none;
-    color: inherit;
 }
 
 #main-space {
@@ -155,7 +157,19 @@
 }
 
 
-/* ------------------------------------------------------- Contact form */
+/* ------------------------------------------------------- Contact page */
+
+.connect-title {
+    top: 37%;
+    left: 5%;
+    position: absolute;
+    text-align: center;
+    color: white;
+}
+
+.connect-form {
+    background-color: #FCFCFC;
+}
 
 .questions {
     margin: 0 auto;
@@ -172,6 +186,7 @@
     padding-top: 10px;
     margin: 0 auto;
     max-width: 60%;
+
 }
 
 input[type=text], textarea {
@@ -224,13 +239,29 @@ input[type=submit] {
     text-align: center;
 }
 
+#qlabel {
+    font-size: 25px;
+    padding-bottom: 20px;
+    font-weight: 700;
+}
+
+#qlabels {
+    font-size: 25px;
+    text-align: center;
+    padding-bottom: 20px;
+    font-weight: 700;
+
+}
+
 .footer-brief a {
     text-decoration: none;
     color: inherit;
 }
 
 .footer-brief a:hover {
-    color: red;
+    transform: scale(1.1);
+    color: #676767;
+    text-shadow: 1px 1px 1px #676767;
 }
 
 .qlinks {
