--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,8 +98,7 @@
     background-size: cover;
 }
 
-#main-me {
-}
+#main-me {}
 
 #main-me img {
     top: 15%;
@@ -129,12 +128,33 @@
     object-fit: contain;
 }
 
-.about-me-section img{
+.about-me-section img {
     float: right;
 }
 
-.about-me-des{
+.about-me-des {
     padding: 6% 40% 6% 5%;
+}
+
+.categories {
+    padding: 2% 15%;
+}
+
+#interest {
+    border-radius: 50%;
+    margin: 0 20px;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 30px;
+}
+
+.right-comment,
+.left-comment {
+    padding: 80px 0;
 }
 
 /* ------------------------------------------------------- My Journey */
@@ -143,7 +163,7 @@
     margin: 30px 30px 100px 30px;
 }
 
-.journey-item{
+.journey-item {
     margin-left: 45%;
     padding: 4em 2em 0em 2em;
     position: relative;
@@ -220,13 +240,20 @@
     text-align: center;
 }
 
-#fullname, #email, #number, #comment {
+#fullname,
+#email,
+#number,
+#comment {
     width: 100%;
     padding: 10px;
     border: 1px solid #000;
-    border-radius: 4px;}
+    border-radius: 4px;
+}
 
-#fullname:hover, #email:hover, #number:hover, #comment:hover {
+#fullname:hover,
+#email:hover,
+#number:hover,
+#comment:hover {
     border: 1px solid red;
 }
 
