--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,86 +4,83 @@
     border: 0;
 }
 
-#home {
-    float: left;
+.row {
+    margin: 0;
+}
+
+/*--------------------------Navigation Section*/
+.nav-section {
+    background-color: #ffffff;
+    min-height: 50px;
+    margin-top: 15px;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #000000;
+}
+
+.nav-section h1 {
     font-size: 280%;
-    padding-left: 20px;
+    margin-left: 10px;
     color: #606060;
     border-color: #fed93a;
+    padding-left: 10px;
 }
 
-#home:hover {
-    transition: .2s linear;
-    opacity: 1;
-    font-weight: 400;
-    transform: scale(1.1);
-    text-shadow: 1px 1px 1px #000;
-    background-color: #f2f2f2;
+.nav-section h2 {
+    text-align: center;
 }
 
-#navbar-menu {
-    margin: 0;
-    font-size: 32px;
-    list-style-type: none;
-}
-
-#home,
-#navbar-menu {
-    margin: 1px;
-    line-height: 50px;
-}
-
-#navbar-menu li {
-    display: block;
-    float: right;
-    margin-right: 40px;
-    opacity: 0.5;
-    height: 100%;
-}
-
-#navbar-menu a {
+.nav-section a {
     text-decoration: none;
-    color: inherit;
+    color: black;
 }
 
-#navbar-menu li:hover {
-    display: block;
-    transition: .2s linear;
-    opacity: 1;
-    font-weight: 400;
-    transform: scale(1.1);
-    text-shadow: 1px 1px 1px #000;
-    background-color: #f2f2f2;
-}
-
-.active {
+.active,
+.mainhome:hover,
+.right:hover{
     color: black;
     opacity: 1;
     display: block;
     font-weight: 500;
     transform: scale(1.1);
     text-shadow: 1px 1px 1px #000000;
-    background-color: #f2f2f2;
 }
 
-#main-space {
-    height: 95vh;
-    width: 100vw;
-    overflow: hidden;
-    position: relative;
+/*------------------------------Header Section*/
+.header-section {
+    min-height: 750px;
 }
 
-.main-image img,
-.main-image2 img,
-.main-image3 img,
-.main-image4 img{
-    height: 95vh;
-    width: 100vw;
-    opacity: 0.5;
+.bg-image1 {
+    background-image: url(../images/it.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
+    min-height: 750px;
+    position: absolute;
+    opacity: 0.5;
+    width: 100vw;
 }
 
-.profile-pic img{
+.bg-image2 {
+    background-image: url(../images/journey.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 750px;
+    position: absolute;
+    opacity: 0.5;
+    width: 100vw;
+}
+
+.bg-image4 {
+    background-image: url(../images/connect.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 750px;
+    position: absolute;
+    opacity: 0.5;
+    width: 100vw;
+}
+
+.profile-pic {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -91,71 +88,78 @@
     margin-top: 100px;
 }
 
-#main-me img {
-    top: 15%;
-    left: 37vw;
-    position: absolute;
-    border-radius: 50%;
-}
-
-.title {
-    top: 65%;
-    left: 30%;
-    position: absolute;
+.header-section h2,
+h3 {
+    font-weight: 700;
     text-align: center;
 }
 
-#header {
+.header-section h2 {
+    padding-top: 25px;
+}
+
+.title {
     padding: 50px;
     margin: auto;
     text-align: center;
     font-size: 55px;
 }
 
-/* ------------------------------------------------------- Home Page Content */
 
-.about-me-section {
+/*--------------------------------Index Main Section*/
+.main-section {
     margin: 2% 7% 5% 7%;
     object-fit: contain;
 }
 
-.about-me-section img {
+.aboutme-img {
     float: right;
+    width: 100%;
 }
 
-.about-me-des {
-    padding: 6% 40% 6% 5%;
+.aboutme p{
+    padding: 6% 0% 6% 5%;
 }
 
-.categories {
-    padding: 2% 15%;
-}
-
-#interest {
+.plane-img,
+.laptop-img,
+.fitness-img,
+.cooking-img {
+    width: 75%;
     border-radius: 50%;
-    margin: 0 20px;
+    margin-top: 25px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-/* Create three equal columns that floats next to each other */
-.column {
-    float: left;
-    width: 33.33%;
-    padding: 30px;
+.travel-info,
+.programming-info,
+.fitness-info,
+.cooking-info {
+    padding: 100px 0px;
 }
 
-.right-comment,
-.left-comment {
-    padding: 80px 0;
+/*---------------------Journey Page*/
+.skill-label {
+    padding: 0 10px;
 }
 
-/* ------------------------------------------------------- My Journey */
+.progress {
+    margin: 10px;
+    height: 2rem;
+}
+
+.html5 {
+    background-color: red;
+}
 
 .journey {
     margin: 30px 30px 100px 30px;
 }
 
 .journey-item {
-    margin-left: 45%;
+    margin-left: 30%;
     padding: 4em 2em 0em 2em;
     position: relative;
     color: black;
@@ -200,7 +204,7 @@
     text-align: center;
 }
 
-/* ------------------------------------------------------- Contact page */
+/*--------------------------------Connect Page*/
 
 .connect-title {
     top: 37%;
@@ -256,99 +260,41 @@
     float: right;
 }
 
-/* ------------------------------------------------------- Footer */
-
-.footer-brief {
+/*-----------------------------Footer Section*/
+.footer-section {
+    min-height: 150px;
     background-color: #f2f2f2;
-    padding: 10px;
+    padding-top: 5px;
 }
 
-.logos {
-    font-size: 40px;
-    text-align: center;
-}
-
-#qlabels {
-    font-size: 25px;
-    text-align: center;
-    padding-bottom: 20px;
-    font-weight: 700;
-}
-
-.footer-brief a {
+.footer-section a{
     text-decoration: none;
-    color: inherit;
+    color: #000000;
 }
 
-.footer-brief a:hover {
+.footer-section a:hover{
     transform: scale(1.1);
-    color: #676767;
+    color: #000000;
     text-shadow: 1px 1px 1px #676767;
 }
 
-.qlinks {
-    column-count: 2;
+.quicklinks h4 {
+    text-align: left;
 }
 
-@media only screen and (max-width: 768px) {
+.connect {
+    text-align: center;
+}
 
-    /* ------------------------------------------------------- global styling */
+.social-logos {
+    font-size: 40px;
+}
 
-    #home {
-        font-size: 150%;
-        padding-left: 10px;
-    }
+.mycv {
+    text-align: center;
+}
 
-    #navbar-menu {
-        font-size: 22px;
-    }
-
-    #home,
-    #navbar-menu {
-        line-height: 40px;
-    }
-
-    #navbar-menu li {
-        margin-right: 20px;
-    }
-
-    #main-space {
-    height: 100%
-    }
-
-    .main-image img,
-    .main-image2 img,
-    .main-image3 img,
-    .main-image4 img{
-        height: inherit;
-        width: inherit;
-    }
-
-
-
-    /* ------------------------------------------------------- Connect Page */
-
-    #header {
-        padding: auto;
-        font-size: 40px;
-    }
-
-    .center-form {
-        max-width: 80%;
-    }
-
-    .questions {
-        line-height: 200%;
-    }
-
-    /* ------------------------------------------------------- Footer */
-
-    .logos {
-        font-size: 23px;
-    }
-
-    #qlabels {
-        font-size: 20px;
-    }
-
-    }
+.fa-file {
+    font-size: 40px;
+    padding-top: 10px;
+}
