--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,6 +263,11 @@ arabic {
 
 .card {
     border: 1px solid #000000;
+    height: 400px;
+}
+
+.projects p {
+    padding: 1% 0% 6% 5%;
 }
 
 .timage {
@@ -271,15 +276,18 @@ arabic {
     height: 200px;
 }
 
-
-.timage2 {
-    background-image: url(../images/stream.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 200px;
+.container-thumb {
+    padding: 10px;
 }
 
+.visitme {
+    margin-left: 25%;
+    width: 50%;
+}
+
+.visitme:hover {
+    font-weight: 700;
+}
 
 /*--------------------------------Connect Page*/
 
@@ -479,6 +487,10 @@ arabic {
     .journey-item p {
         font-size: 13px;
     }
+    
+    .journey-item {
+        margin-left: 60%;
+    }
 
     .journey-item:before {
         content: attr(journey-dates);
@@ -502,13 +514,26 @@ arabic {
         display: block;
         top: 2.4em;
         position: absolute;
-        content: '';
         background: red;
         transform: rotate(45deg);
     }
 
     .journey-finisher {
         margin: 50px 0 80px 0;
+    }
+    
+    /*-----------------------footer*/
+    .projects p {
+        margin: 0;
+    }
+    
+    
+    .card {
+        margin: 20px;
+    }
+    
+    .container-thumb p{
+        font-size: 15px;
     }
 
     .connect-title,
