--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@
     height: 95vh;
 }
 
-.profile-pic {
+.profile-pic2 {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -157,8 +157,8 @@ h3 {
     padding: 100px 0px;
 }
 
-.left-travelhidden, 
-.left-fitnesshidden{
+.left-travelhidden,
+.left-fitnesshidden {
     visibility: hidden;
 }
 
@@ -423,12 +423,19 @@ arabic {
         min-height: 250px;
     }
 
-    .profile-pic {
-        margin-top: 5%;
-        width: 40%;
+    .profile-pic1 {
+        padding-top: 0;
+        position: absolute;
+        text-align: center;
     }
 
-    .header-section h2,h3 {
+    .profile-pic2 {
+        width: 40%;
+        border-radius: 50%;
+    }
+
+    .header-section h2,
+    h3 {
         font-size: 150%
     }
 
@@ -445,7 +452,7 @@ arabic {
         margin: 35% 0 10% 0;
     }
 
-    .aboutme p{
+    .aboutme p {
         padding: 1% 0%;
     }
 
@@ -466,7 +473,7 @@ arabic {
     }
 
     .left-travelhidden,
-    .left-fitnesshidden{
+    .left-fitnesshidden {
         display: none;
     }
 
@@ -487,7 +494,7 @@ arabic {
     .journey-item p {
         font-size: 13px;
     }
-    
+
     .journey-item {
         margin-left: 60%;
     }
@@ -521,41 +528,54 @@ arabic {
     .journey-finisher {
         margin: 50px 0 80px 0;
     }
-    
-    /*-----------------------footer*/
+
+    /*-----------------------portfolio Section */
     .projects p {
         margin: 0;
     }
-    
-    
+
+
     .card {
         margin: 20px;
     }
-    
-    .container-thumb p{
+
+    .container-thumb p {
         font-size: 15px;
     }
 
+    /*-----------------------Connect Section*/
     .connect-title,
-    .connect-title h1{
+    .connect-title h1 {
         top: 25%;
         left: 3%;
         font-size: 20px;
     }
 
     /*-----------------------footer*/
-    .quicklinks,
-    .quicklinks h4{
+    .quicklinks h4,
+    .connect h4,
+    .mycv h4 {
         text-align: center;
+        font-size: 20px;
     }
 
-    .connect {
-        padding: 30px 0;
+    .quicklinks a {
+        font-size: 15px;
+    }
+
+    .footer-section {
+        padding: 15px 0;
     }
 
 
     .social-logos {
-        padding: 10px 0;
+        padding: 30px 0;
+        font-size: 25px;
+    }
+
+    .cv {
+        padding: 14px;
+        font-size: 25px;
     }
 
 }
@@ -571,7 +591,7 @@ arabic {
         margin: 0;
         padding: 0;
     }
-    
+
     .title {
         padding: 20px;
         margin: auto;
@@ -593,22 +613,28 @@ arabic {
 
     .nav-section h2 {
         text-align: center;
-        font-size: 125%;
-        padding: 0;
+        font-size: 90%;
+        padding-top: 10px;
     }
 
     /*-----------------------header section*/
-    
+
     .header-section {
         min-height: 250px;
     }
-    
-    .profile-pic {
-        margin-top: 5%;
-        width: 40%;
+
+    .profile-pic1 {
+        top: -10px;
+        text-align: center;
     }
-    
-    .header-section h2,h3 {
+
+    .profile-pic2 {
+        width: 40%;
+        border-radius: 50%;
+    }
+
+    .header-section h2,
+    h3 {
         font-size: 110%
     }
 
@@ -618,28 +644,29 @@ arabic {
     .bg-image4 {
         background-size: contain;
     }
-    
+
     /*-----------------------index main section*/
     .main-section {
         margin: 10% 0;
     }
 
-    .aboutme p{
+    .aboutme p {
         padding: 1% 0;
     }
-    
+
     .interests h2 {
         font-size: 150%;
         text-align: center;
     }
-    
+
     .left-travelhidden,
-    .left-fitnesshidden {
+    .left-fitnesshidden{
+        display: initial;
         visibility: visible;
     }
-    
+
     .travel-info,
-    .fitness-info{
+    .fitness-info {
         display: none;
     }
 
@@ -647,14 +674,14 @@ arabic {
     .laptop-img,
     .fitness-img,
     .cooking-img {
-        padding: 10px 0 40px 0;
+        margin-bottom: 15px;
     }
 
     .programming-info,
     .cooking-info {
         padding: 10px 15px;
     }
-    
+
     .progress-skills {
         display: none;
     }
@@ -665,10 +692,13 @@ arabic {
 
     .journey-item h4 {
         font-size: 18px;
+        width: 150px;
+
     }
 
     .journey-item p {
         font-size: 13px;
+        width: 150px;
     }
 
     .journey-item:before {
@@ -685,6 +715,9 @@ arabic {
         background-color: red;
         color: white;
         padding: 4px;
+        width: 150px;
+
+
     }
 
     .journey-item:after {
@@ -693,7 +726,6 @@ arabic {
         display: block;
         top: 2.4em;
         position: absolute;
-        content: '';
         background: red;
         transform: rotate(45deg);
     }
@@ -703,7 +735,7 @@ arabic {
     }
 
     .connect-title,
-    .connect-title h1{
+    .connect-title h1 {
         top: 25%;
         left: 3%;
         font-size: 20px;
@@ -711,15 +743,15 @@ arabic {
 
     /*-----------------------footer*/
     .quicklinks,
-    .quicklinks h4{
+    .quicklinks h4 {
         text-align: center;
     }
-    
+
     .connect {
         padding: 30px 0;
     }
-    
-    
+
+
     .social-logos {
         padding: 10px 0;
     }
