Code clean up on the styling sheet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@
     opacity: 1;
     display: block;
     font-weight: 500;
-    transform: scale(1.1);
+    text-decoration: underline;
     text-shadow: 1px 1px 1px #000000;
 }
 
@@ -393,15 +393,16 @@ arabic {
         padding: 0;
     }
 
-    .maintitle {
+    #myname {
         padding: 20px;
         text-align: center;
         font-size: 30px;
     }
 
     /*-----------------------navigation bar*/
-    .mainhome,
+    #myname,
     .right {
+        margin: 0;
         padding: 0;
     }
 
@@ -414,7 +415,7 @@ arabic {
     .nav-section h2 {
         text-align: center;
         font-size: 95%;
-        padding: 15px 10px 0px 10px;
+        padding: 20px 10px 0px 10px;
     }
 
     /*-----------------------header section*/
