--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
 }
 
 #myname {
-    font-size: 280%;
+    font-size: 50px;
     margin-left: 10px;
     color: #606060;
     border-color: #fed93a;
@@ -29,7 +29,7 @@
 .right h2 {
     padding-top: 20px;
     text-align: center;
-    font-size: 150%;
+    font-size: 25px;
 }
 
 .nav-section a {
@@ -406,16 +406,10 @@ arabic {
         padding: 0;
     }
 
-    .nav-section h1 {
-        font-size: 150%;
-        text-align: left;
-        padding: 10px 30px;
-    }
-
     .nav-section h2 {
         text-align: center;
-        font-size: 95%;
-        padding: 20px 10px 0px 10px;
+        font-size: 17px;
+        padding: 15px 10px 0px 10px;
     }
 
     /*-----------------------header section*/
@@ -425,14 +419,15 @@ arabic {
     }
 
     .profile-pic1 {
-        padding-top: 0;
         position: absolute;
-        text-align: center;
     }
 
     .profile-pic2 {
+        margin-top: 50px;
         width: 40%;
         border-radius: 50%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .header-section h2,
@@ -593,20 +588,23 @@ arabic {
     /*-----------------------navigation bar*/
 
     #myname {
-        font-size: 150%;
+        font-size: 35px;
         text-align: center;
         padding: 0;
 
     }
 
-    .right h2 {
-        padding-top: 20px;
+    .right{
+        margin: 0;
+        padding-top: 0;
         text-align: center;
-        font-size: 90%;    }
+        font-size: 15px;
+    }
 
     /*-----------------------header section*/
 
     .profile-pic2 {
+        margin-top:20px;
         margin-left: auto;
         margin-right: auto;
     }
