fixed code within the navigation bar as well as the extended the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,7 +271,7 @@ arabic {
 
 .card {
     border: 1px solid #000000;
-    height: 400px;
+    height: 425px;
 }
 
 .projects p {
@@ -291,6 +291,7 @@ arabic {
 .visitme {
     margin-left: 25%;
     width: 50%;
+    bottom: 10px;
 }
 
 .visitme:hover {
@@ -354,7 +355,7 @@ arabic {
 .footer-section {
     min-height: 150px;
     background-color: #f2f2f2;
-    padding-top: 5px;
+    padding-top: 15px;
 }
 
 .footer-section a {
